k8s/base/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toimi-web
  namespace: apps
spec:
  selector:
    app: toimi-web
  ports:
    - port: 80
      targetPort: 8080
